2006-06-12
	* Numbers_Words: Version 0.15.0 released.
	* Words/lang.nl.php: New language file: nl for Dutch (Thanks to WHAM van Dinter)
	* Words/lang.et.php: changed locale name for Estonian language from 'ee' to 'et' (#5618).
	* Words/lang.ru.php: fixed bug in Russian translation (if x modulo 10 was equal to 0) (#6654).
	* Words.php: new Numbers_Words::getLocales() method (Thanks to Bertrand Gugger).
	* tests/test-numbers-words.php: updated to use getLocales().
	* package.xml: updated to version 2.0.

2005-09-19
	* Numbers_Words: Version 0.14.0 released.
	* Words/lang.*.php: added $convert_fraction optional argument that allow to not convert fraction part in toCurrencyWorkds() method.
	* Words/lang.en_GB.php: fixed plural of pence; toCurrency() method added.

2005-03-09
	* Numbers_Words: Version 0.13.1 released.
	* Words.php: Fixed a problem with no leading zero in fraction of the currency value (reported by geekdom at gmail dot com).

2005-02-28
	* Numbers_Words: Version 0.13.0 released.
	* support for a new currency ILS (or NIS) for New Israeli Sheqel

2005-02-15
	* Words/lang.cs.php: New language file: cs for Czech (Thanks to Petr 'PePa' Pavel)

2005-02-03
	* Words/lang.he.php: New language file: he for Hebrew (Thanks to Hadar Porat)

2005-01-11
	* Numbers_Words: Version 0.12.0 released.
	* Words/lang.fr_BE.php: New language file: fr_BE for French (Belgium) (Thanks to Philippe Bajoit).

2004-10-25
	* Fixed spell mistake in some files - Britich to British (Thanks to Christian Weiske)

2004-10-22
	* Numbers_Words: Version 0.11.0 released.
	* Words/lang.pt_BR.php: toCurrencyWords() support in pt_BR translation (Thanks to Mario H.C.T).

2004-09-30
	* Numbers_Words: Version 0.10.1 released.
	* Words/lang.de.php: Small bug fix to German translation (the one thousand) (Thanks to neuner at futureweb dot at for the fix).
	* tests/test-numbers-words.php: Changed test number.

2004-09-20
	* Numbers_Words: Version 0.10.0 released.